# Static-Call-Graph-Generator

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
backend/: Makefile  app.py  requirements.txt
backend/jupyter_notebooks/: dot.html  generate_call_graph_cg_json.ipynb
backend/scripts/: clone_github_repo.sh  generate_call_graph.py
call_graph/: call_graph_functions.py  clone_github_repo.sh  generate_call_graph.py  generate_cg_json.sh  streamlit.py
cg_htmls/: GoogleTrends_graph.html  PyCG.html  instaloader_graph.html  parsera.html  spectographic.html  yt-fts.html
cg_jsons/: GoogleTrends_cg.json  PyCG.json  instaloader_cg.json  parsera.json  spectrographic_cg.json  webdriver_cg.json  yt-fts.json
frontend/: package.json
frontend/src/: App.js
frontend/src/Components/: Brand.js
jupyter_notebooks/: callgraph.dot  callgraph.json  generate_call_graph_code2flow.ipynb  generate_call_graph_pyan.ipynb  matplotlib_test.ipynb
utilities/: test_nodes_code2flow.txt
