[tool.poetry]
name = "call-graph"
version = "0.1.0"
description = ""
authors = ["hamsburger <harriszheng222@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asttokens = "2.4.1"
colorama = "0.4.6"
comm = "0.2.2"
contourpy = "1.2.1"
cycler = "0.12.1"
debugpy = "1.6.7"
decorator = "5.1.1"
exceptiongroup = "1.2.2"
executing = "2.0.1"
fonttools = "4.53.1"
importlib-metadata = "8.0.0"
ipykernel = "6.29.5"
ipython = "8.26.0"
jedi = "0.19.1"
jinja2 = "3.1.4"
jsonpickle = "3.2.2"
jupyter-client = "8.6.2"
jupyter-core = "5.7.2"
kiwisolver = "1.4.5"
markupsafe = "2.1.5"
matplotlib = ">=3.10,<4.0"
matplotlib-inline = "0.1.7"
nest-asyncio = "1.6.0"
networkx = "3.3"
numpy = "2.0.0"
packaging = "24.1"
pandas = "2.2.2"
parso = "0.8.4"
pickleshare = "0.7.5"
pillow = "10.4.0"
pip = "24.0"
platformdirs = "4.2.2"
prompt-toolkit = "3.0.47"
psutil = "5.9.0"
pure-eval = "0.2.2"
pygments = "2.18.0"
pyparsing = "3.1.2"
python-dateutil = "2.9.0"
pytz = "2024.1"
pyvis = "0.3.2"
pywin32 = ">=305,<305.1"
pyzmq = "25.1.2"
scipy = "1.14.0"
setuptools = "69.5.1"
six = "1.16.0"
stack-data = "0.6.2"
tornado = "6.2"
traitlets = "5.14.3"
typing-extensions = "4.12.2"
tzdata = "2024.1"
wcwidth = "0.2.13"
wheel = "0.43.0"
zipp = "3.19.2"
pycg = "0.0.6"
streamlit = "^1.41.1"
boto3 = "^1.35.87"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
